# Onboard-SDK

./: CMakeLists.txt  package.xml
osdk-core/: CMakeLists.txt
osdk-wrapper/: CMakeLists.txt
platform/linux/: CMakeLists.txt
platform/linux/inc/: LinuxSerialDevice.h
platform/linux/src/: LinuxSerialDevice.cpp
