<?xml version="1.0"?>
<package>
  <name>dji_onboardsdk</name>
  <version>3.2.1</version>
  <description>A wrapper for the native (non-ROS) DJI Onboard SDK package</description>

  <maintainer email="info@intermodalics.eu">Intermodalics BVBA</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
